--- a/pom.xml
+++ b/pom.xml
@@ -10,25 +10,29 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-servlet</artifactId>
-      <version>9.2.11.v20150529</version>
+      <version>9.4.14.v20181114</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>jboss.logging</groupId>
+      <artifactId>jboss-logging-spi</artifactId>
+      <version>1.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
-
-            <plugin>
-                      <artifactId>maven-compiler-plugin</artifactId>
-                              <version>2.3.2</version>
-                                      <configuration>
-                                                  <source>1.7</source>
-                                                            <target>1.7</target>
-                                                                    </configuration>
-                                                                          </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
